updated code int -> Guid, added docker with db

--- a/Relay.TestChat/MainWindow.xaml
+++ b/Relay.TestChat/MainWindow.xaml
@@ -1,30 +1,41 @@
- <Window x:Class="Relay.TestChat.MainWindow"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         mc:Ignorable="d"
-         Title="Relay.Server"
+<Window x:Class="Relay.TestChat.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Title="Relay.Server"
         Height="600"
         Width="600"
         Icon="/Files/logo.jpg"
         Loaded="WindowLoaded"
         Closing="WindowClosing">
-    <StackPanel Margin="4">
-        <Label Content="Введите адресс сервера"/>
-        <TextBox x:Name="serverAdress"/>
-        <Label Content="Введите логин"/>
-        <TextBox x:Name="userTextBox"/>
-        <Label Content="Введите сообщение"/>
-        <TextBox x:Name="messageTextBox"/>
-        <Button x:Name="sendBtn"
-                Content="Отправить"
-                Click="ButtonClick"
-                IsEnabled="False"/>
-        <Button x:Name="reconect"
-                Content="Переподключиться"
-                Click="ReconnectButton"
-                IsEnabled="False"></Button>
-        <ListBox x:Name="chatbox"/>
-    </StackPanel>
+        <StackPanel Margin="4">
+                <Label Content="Введите адрес сервера"/>
+                <TextBox x:Name="serverAdress"
+                                Width="300"
+                                Margin="0,0,0,10"/>
+                <Label Content="Введите логин"/>
+                <TextBox x:Name="userTextBox"
+                                Width="300"
+                                Margin="0,0,0,10"/>
+                <Label Content="Введите сообщение"/>
+                <TextBox x:Name="messageTextBox"
+                                Width="300"
+                                Margin="0,0,10"/>
+                <Button x:Name="sendBtn"
+                                Content="Отправить"
+                                Click="ButtonClick"
+                                IsEnabled="False"
+                                Width="100"
+                                Margin="0,10,0,0"/>
+                <Button x:Name="reconect"
+                                Content="Переподключиться"
+                                Click="ReconnectButton"
+                                IsEnabled="False"
+                                Width="150"
+                                Margin="0,10,0,10"/>
+                <ListBox x:Name="chatbox"
+                                Height="300"/>
+        </StackPanel>
 </Window>
